--- a/index.html
+++ b/index.html
@@ -1,158 +1,276 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		content="Site web de la photographe Nina Carducci, basée sur Bordeaux. Veritable passionnée, elle met en image toute sorte d'évènements et immortalise les moments chers à vos coeurs.">
+
+	<!-- Meta données pour Instagram -->
+	<meta property="insta:username" content="ninacarducci.photo">
+
+	<!-- Meta données pour Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+	<meta property="og:description" content="Site web de Nina Carducci, photographe professionnel, basé à Bordeaux.">
+	<meta property="og:url" content="https://skies-land.github.io/Projet_9_OpenClassrooms_-_Nina_Carducci/">
+	<meta property="og:image"
+		content="https://raw.githubusercontent.com/Skies-Land/Projet_9_OpenClassrooms_-_Nina_Carducci/main/assets/images/nina.webp">
+	<meta property="og:locale" content="fr_FR">
+
+	<!-- Meta données pour Twitter -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci - Photographe professionnelle à Bordeaux">
+	<meta name="twitter:description" content="Site web de Nina Carducci, photographe professionnel, basé à Bordeaux.">
+	<meta name="twitter:image"
+		content="https://raw.githubusercontent.com/Skies-Land/Projet_9_OpenClassrooms_-_Nina_Carducci/main/assets/images/nina.webp">
+
+
+	<!--=============== SCHEMA.ORG ===============-->
+	<script type="application/ld+json">
+					{
+						"@context": "https://schema.org",
+						"@type": "LocalBusiness",
+						"name": "Nina Carducci",
+						"description": "Photographe professionnel basé à Bordeaux, spécialisé dans les portraits, les mariages et les concerts.",
+						"image": "https://raw.githubusercontent.com/Skies-Land/Projet_9_OpenClassrooms_-_Nina_Carducci/main/assets/images/nina.webp",
+						"url": "https://skies-land.github.io/Projet_9_OpenClassrooms_-_Nina_Carducci/",
+						"telephone": "05 56 67 78 89",
+						"priceRange": "50€ - 400€",
+						"address": {
+							"@type": "PostalAddress",
+							"streetAddress": "68 avenue Alsace-Lorraine",
+							"addressLocality": "Bordeaux",
+							"postalCode": "33200",
+							"addressCountry": "FR"
+						},
+						"openingHoursSpecification": {
+							"@type": "OpeningHoursSpecification",
+							"dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+							"opens": "10:00",
+							"closes": "19:00"
+						}
+					}
+	</script>
+
+	<link rel="icon" type="images/x-icon" href="./assets/images/favicon.webp">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		rel="stylesheet">
+	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
 </head>
+
 <body>
-<div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
-	<div class="nav">   
-		<ul>
-			<li><a href="#about">À propos</a></li>
-			<li><a href="#gallery">Galerie</a></li>
-			<li><a href="#services">Service</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
-		</ul>
-	</div>
-</div>
-<div id="header">
+	<header id="header">
+		<div class="top-header">
+			<p class="name">Nina Carducci</p>
+			<nav class="nav">
+				<ul>
+					<li><a href="#about">À propos</a></li>
+					<li><a href="#gallery">Galerie</a></li>
+					<li><a href="#services">Service</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img
+								width="20" height="20" src="assets/images/instagram.webp"
+								alt="aller sur la page instagram de Nina Carducci"></a></li>
+				</ul>
+			</nav>
+		</div>
 
-	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+					aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+					aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active picture">
+					<img loading="eager" src="./assets/images/slider/ryoji_iwata-1920.webp" srcset="
+               ./assets/images/slider/ryoji_iwata-375.webp 375w,
+               ./assets/images/slider/ryoji_iwata-768.webp 768w,
+               ./assets/images/slider/ryoji_iwata-1440.webp 1440w,
+               ./assets/images/slider/ryoji_iwata-1920.webp 1920w
+         " sizes="100vw" alt="Un homme en costume traversant la rue" class="d-block w-100" fetchpriority="high"
+						width="1920" height="888" />
+				</div>
+				<div class="carousel-item">
+					<img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+						class="d-block w-100" alt="photo d'une foule de gens les bras en l'air">
+				</div>
+				<div class="carousel-item">
+					<img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+						class="d-block w-100" alt="photo d'un couple de mariés qui danse et s'embrasse ">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+				data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="...">
+	</header>
+
+	<main>
+		<section id="about">
+			<div class="picture left">
+				<img loading="lazy" src="./assets/images/nina768.webp" srcset="
+        ./assets/images/nina375.webp 375w,
+        ./assets/images/nina768.webp 768w,
+        ./assets/images/nina1440.webp 1440w,
+        ./assets/images/nina1920.webp 1920w
+     " sizes="(max-width: 375px) 375px, (max-width: 768px) 768px, (max-width: 1440px) 1440px, 1920px"
+					alt="portrait de Nina Carducci" fetchpriority="high" width="560" height="558">
 			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="...">
+			<div id="about-me">
+				<h1 class="about-me__title">À propos de moi, Nina Carducci, photographe par vocation...</h1>
+				<h2 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné.
+					Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me
+					fait vibrer.</h2>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le
+					figer
+					au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le
+					partager
+					au plus grand nombre.
+					C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma
+					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la
+					tendresse
+					et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="...">
+		</section>
+
+		<section id="gallery">
+			<h2 class="title">Portfolio</h2>
+			<div class="container py-3">
+				<ul class="nav nav-pills">
+					<li><button class="nav-link active" data-category="tous">Tous</button></li>
+					<li><button class="nav-link" data-category="concerts">Concerts</button></li>
+					<li><button class="nav-link" data-category="entreprise">Entreprise</button></li>
+					<li><button class="nav-link" data-category="mariage">Mariage</button></li>
+					<li><button class="nav-link" data-category="portraits">Portraits</button></li>
+				</ul>
+				<div class="gallery">
+				</div>
 			</div>
-		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
-		</button>
-	</div>
-</div>
-<div id="about">
-	<div class="picture left">
-		<img src="./assets/images/nina.png">
-	</div>
-	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
-		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-	</div>
-</div>
-<div id="gallery">
-	<h3 class="title">Portfolio</h3>
-	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"/>
-		</div>
-	</div>
-	<div class="quote">
-		<figure>
-			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
-			</blockquote>
-			<figcaption class="quote__author">- Richard Avedon</figcaption>
-		</figure>
-	</div>
-</div>
-<div id="services">
-	<h3 class="title">Mes services</h3>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
-			</div>
-			<div class="service__price">
-				<h4>350€/demi journée</h4>
-				<span>Matériel, déplacement inclus</span>
+			<div id="myModal" class="modal">
+				<span class="close">&times;</span>
+				<div class="modal-content">
+					<div class="modal-slide">
+						<img class="modal-img" id="modalImg">
+					</div>
+					<div class="modal-navigation">
+						<button class="prev mg-prev"></button>
+						<button class="next mg-next"></button>
+					</div>
+				</div>
 			</div>
 
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+
+			<div class="quote">
+				<figure>
+					<blockquote>
+						<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est
+							traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en
+							photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
+					</blockquote>
+					<figcaption class="quote__author">- Richard Avedon</figcaption>
+				</figure>
 			</div>
-			<div class="service__price">
-				<h4>50€/photo</h4>
-				<span>2 AR par photo</span>
+		</section>
+
+		<section id="services">
+			<h2 class="title">Mes services</h2>
+			<div class="container">
+				<div class="service">
+					<div class="service__description">
+						<h3>Shooting photo</h3>
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en
+							Île-de-France pour réaliser vos photos</p>
+					</div>
+					<div class="service__price">
+						<h4>350€/demi journée</h4>
+						<span>Matériel, déplacement inclus</span>
+					</div>
+
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Retouches</h3>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour
+							vos
+							publications</p>
+					</div>
+					<div class="service__price">
+						<h4>50€/photo</h4>
+						<span>2 AR par photo</span>
+					</div>
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Album photos</h3>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album
+							photo
+							personnalisé</p>
+					</div>
+					<div class="service__price">
+						<h4>400€ album A4</h4>
+						<span>30 pages recto/verso</span>
+					</div>
+				</div>
 			</div>
+		</section>
+
+		<div class="quote">
+			<figure>
+				<blockquote>
+					<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou
+						une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
+				</blockquote>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
+			</figure>
 		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Album photos</h3>
-				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+
+		<section id="contact">
+			<div class="container">
+				<div class="form-container">
+					<h2>Une question ? Une demande de devis ?</h2>
+					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<form action="" method="post">
+						<label for="nom">Nom</label>
+						<input type="text" name="nom" id="nom">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" cols="30" rows="10"></textarea>
+						<input type="submit" value="Envoyer" />
+					</form>
+				</div>
+				<div class="picture right">
+					<img loading="lazy" src="./assets/images/camera1920.webp" srcset="
+								./assets/images/camera375.webp 375w,
+								./assets/images/camera768.webp 768w,
+								./assets/images/camera1440.webp 1440w,
+								./assets/images/camera1920.webp 1920w
+					" alt="photo d'un appareil photo reflex Leica" sizes="100vw" fetchpriority="high" width="418" height="417">
+				</div>
 			</div>
-			<div class="service__price">
-				<h4>400€ album A4</h4>
-				<span>30 pages recto/verso</span>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="quote">
-	<figure>
-		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
-		</blockquote>
-		<figcaption class="quote__author">- Richard Avedon</figcaption>
-	</figure>
-</div>
-<div id="contact">
-	<div class="container">
-		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
-			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
-				<label>Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label>Email</label>
-				<input type="email" name="email" id="email">
-				<label>Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
-			</form>
-		</div>
-		<div class="picture right">
-			<img src="./assets/images/camera.png">
-		</div>
-	</div>
-</div>
+		</section>
+	</main>
+	<script src="./assets/gallery.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 </body>
+
 </html>
