Recodage de la galerie en js pur

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 					aria-label="Slide 3"></button>
 			</div>
 			<div class="carousel-inner">
-				<div class="carousel-item active picture">
-					<img loading="eager" src="./assets/images/slider/ryoji_iwata-1920.webp" srcset="
+				<div class="carousel-item active">
+					<img src="./assets/images/slider/ryoji_iwata-1920.webp" srcset="
                ./assets/images/slider/ryoji_iwata-375.webp 375w,
                ./assets/images/slider/ryoji_iwata-768.webp 768w,
                ./assets/images/slider/ryoji_iwata-1440.webp 1440w,
