ajout du preload sur la slide 1 du caroussel

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
+	<link rel="preload" href="./assets/images/slider/ryoji_iwata-768.webp" as="image">
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
 </head>
 
