css minifié et nouvelle correction des formats sur les images du caroussel

--- a/index.html
+++ b/index.html
@@ -103,12 +103,22 @@
 						width="1920" height="888" />
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
-						class="d-block w-100" alt="photo d'une foule de gens les bras en l'air">
+					<img loading="lazy" src="./assets/images/slider/nicholas-green-1920.webp" srcset="
+					./assets/images/slider/nicholas-green-375.webp 375w,
+					./assets/images/slider/nicholas-green-768.webp 768w,
+					./assets/images/slider/nicholas-green-1440.webp 1440w,
+					./assets/images/slider/nicholas-green-1920.webp 1920w
+		" sizes="100vw" alt="Photo d'une foule gens les bras en l'air dans un évenement" class="d-block w-100" width="1920"
+						height="888" />
 				</div>
 				<div class="carousel-item">
-					<img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
-						class="d-block w-100" alt="photo d'un couple de mariés qui danse et s'embrasse ">
+					<img loading="lazy" src="./assets/images/slider/edward-cisneros-1920.webp" srcset="
+					./assets/images/slider/edward-cisneros-375.webp 375w,
+					./assets/images/slider/edward-cisneros-768.webp 768w,
+					./assets/images/slider/edward-cisneros-1440.webp 1440w,
+					./assets/images/slider/edward-cisneros-1920.webp 1920w
+		" sizes="100vw" alt="Photo d'un couple de mariés qui dans et s'embrasse" class="d-block w-100" width="1920"
+						height="888" />
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
